--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -111,8 +111,8 @@ jobs:
         PLIST_PATH="${APP_PATH}/Info.plist"
 
         echo "Modifying version in Info.plist..."
-        /usr/bin/plutil -replace CFBundleVersion -string "${{ env.TAG }}" "${PLIST_PATH}.plist"
-        /usr/bin/plutil -replace CFBundleShortVersionString -string "${VERSION}" "${PLIST_PATH}.plist"
+        /usr/bin/plutil -replace CFBundleVersion -string "${{ env.TAG }}" "${PLIST_PATH}"
+        /usr/bin/plutil -replace CFBundleShortVersionString -string "${VERSION}" "${PLIST_PATH}"
 
         
         # 4. Re-package the modified IPA using a temporary name
