--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -42,7 +42,7 @@ jobs:
                 DATE=$(echo "$RELEASES_JSON" | jq -r ".[$i].published_at")
                 
                 # Format the release body: escape newlines (\\n) and double quotes (\\") for safe JSON insertion
-                BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
+                BODY=$(jq -r ".[$i].body | @json" <<< "$RELEASES_JSON")
 
                 echo "Found release $TAG at $URL"
 
@@ -164,7 +164,7 @@ jobs:
           \"version\": \"${VERSION}\",
           \"buildVersion\": \"${TAG}\",
           \"date\": \"${DATE}\",
-          \"localizedDescription\": \"${BODY}\",
+          \"localizedDescription\": \${BODY}\,
           \"minOSVersion\": null
         }] + .apps[0].versions" "$FILE" > tmp.$$.json && mv tmp.$$.json "$FILE"
     - name: Upload a Build Artifact
