Try fixing json parse

--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -42,7 +42,8 @@ jobs:
                 DATE=$(echo "$RELEASES_JSON" | jq -r ".[$i].published_at")
                 
                 # Format the release body: escape newlines (\\n) and double quotes (\\") for safe JSON insertion
-                BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
+                BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | jq -R -s @json)
+                echo "$BODY"
 
                 echo "Found release $TAG at $URL"
 
@@ -152,7 +153,7 @@ jobs:
         VERSION="${{ env.VERSION }}"
         SIZE="${{ env.SIZE }}" # Now using the correct size in bytes
         DATE="${{ env.DATE }}"
-        BODY=$(jq -Rn --arg body "${{ env.BODY }}" '$body')
+        BODY="${{ env.BODY }}"
 
         if [ -z "$URL" ]; then
           echo "No IPA release URL found. Skipping update."
@@ -164,7 +165,7 @@ jobs:
           \"version\": \"${VERSION}\",
           \"buildVersion\": \"${TAG}\",
           \"date\": \"${DATE}\",
-          \"localizedDescription\": ${BODY},
+          \"localizedDescription\": \"${BODY}\",
           \"minOSVersion\": null
         }] + .apps[0].versions" "$FILE" > tmp.$$.json && mv tmp.$$.json "$FILE"
     - name: Upload a Build Artifact
