--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -42,7 +42,8 @@ jobs:
                 DATE=$(echo "$RELEASES_JSON" | jq -r ".[$i].published_at")
                 
                 # Format the release body: escape newlines (\\n) and double quotes (\\") for safe JSON insertion
-                BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | sed ':a;N;$!ba;s/\n/\\n/g' | sed 's/"/\\"/g')
+                BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body")
+                echo $BODY
 
                 echo "Found release $TAG at $URL"
 
