--- a/.github/workflows/update-json.yml
+++ b/.github/workflows/update-json.yml
@@ -43,7 +43,8 @@ jobs:
                 
                 # Format the release body: escape newlines (\\n) and double quotes (\\") for safe JSON insertion
                 BODY=$(echo "$RELEASES_JSON" | jq -r ".[$i].body" | sed ':a;N;$!ba;s/\\/\\\\/g;s/\n/\\n/g;s/"/\\"/g')
-                echo "$BODY"
+                echo "{\"body\":\"$BODY\"}"
+
 
                 echo "Found release $TAG at $URL"
 
